# DKit

./: CMakeLists.txt  DKIT.sln  DKIT.vcxproj  DKIT.vcxproj.filters  run.sh
include/glad/: glad.h
src/: Dkit.h  Main.cpp
src/Managers/ElementManager/: ElementManager.h
src/Managers/ElementManager/Render/Shader/GLSL/Shader/: SquareShader.cpp  SquareShader.h
src/Managers/ElementManager/Render/Shader/GLSL/Vertex/: VertexShader.cpp  VertexShader.h
src/Managers/ElementManager/Render/Square/: Square.cpp  Square.h
src/Managers/ElementManager/Render/Square/OpenGL/: Square.cpp  Square.h
src/Managers/ElementManager/Square/: Source.h  Square.cpp
src/Managers/WindowManager/: WindowManager.cpp  WindowManager.h
src/Render/: RenderAPI.cpp  RenderAPI.h
src/Render/DirectX/: DirectX.cpp  DirectX.h
src/Render/Metal/: Metal.cpp  Metal.h
src/Render/OpenGL/: OpenGL.cpp  OpenGL.h
src/Render/OpenGL/Element/: ShaderHelper.cpp  ShaderHelper.h
src/Render/OpenGL/Shader/: ShaderHelper.cpp  ShaderHelper.h
src/Render/OpenGL/Shader/Fragment/: React.frag
src/Render/Vulkan/: Vulkan.cpp  Vulkan.h
src/Render/Vulkan/ImageView/: Image.h  ImageView.h  ImageViewManager.h
src/Render/Vulkan/Shader/: Shader.h
src/Utils/ColorUtils/: ColorUtils.cpp  ColorUtils.h
src/Utils/KeyBoardUtils/: KeyBoardUtils.cpp  KeyBoardUtils.h
src/Utils/MathUtils/: MathUtils.h
src/Utils/OSUtils/: OSUtils.h
